k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivy-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  rules:
    - host: s3.localhost
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: s3-svc
                port:
                  number: 9001
    - host: api.localhost
      http:
        paths:
          - path: /evc(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evc-svc
                port:
                  number: 4500
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-svc
                port:
                  number: 4507
          - path: /replays(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: replays-svc
                port:
                  number: 4505
