k8s/ingress/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivy-redis-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: redis-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
    - host: redis.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redisinsight-svc
                port:
                  number: 5000
